fixed the body styling up a bit, align-items was used by mistake, updated the news tabas content

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     background-color: rgb(14, 10, 20);
     font-family: 'Fira Code', monospace;
     font-weight: 400;
@@ -212,3 +212,4 @@ a:hover {
 /* MATH.HTML SPECIFIC */
 
 /*CDUDE.HTML SPECIFIC */
+
